--- a/README.Rmd
+++ b/README.Rmd
@@ -50,38 +50,35 @@ open-source resources for impactful and equitable research globally.
 
 ## Installation
 
-\`\`\`r
-
-\# Install from GitHub
-
+```r
+# Install from GitHub
 devtools::install_github("drrubesh/gtregression")
-
-\`\`\`
+```
 
 ## Quick Start
 
-\`\`\`r
-
+```r
 library(gtregression)
 
 ## Logistic regression
-
-data(PimaIndiansDiabetes2, package = "mlbench") \
-\
-multi_reg( data = PimaIndiansDiabetes2, \
-outcome = "diabetes", \
-exposures = c("age", "mass", "glucose"), approach = "logit" )
+data(PimaIndiansDiabetes2, package = "mlbench")
+multi_reg(
+  data = PimaIndiansDiabetes2,
+  outcome = "diabetes",
+  exposures = c("age", "mass", "glucose"),
+  approach = "logit"
+)
 
 ## Negative binomial regression
+data(epil, package = "MASS")
+multi_reg_nbin(
+  data = epil,
+  outcome = "y",
+  exposures = c("trt", "base", "age")
+)
+```
 
-data(epil, package = "MASS") \
-\
-multi_reg_nbin( data = epil, outcome = "y", exposures = c("trt", "base",
-"age") )
-
-\`\`\`
-
-# Key Functions
+## Key Functions
 
 | Function Name             | Purpose                                        |
 |---------------------------|------------------------------------------------|
@@ -103,23 +100,40 @@ multi_reg_nbin( data = epil, outcome = "y", exposures = c("trt", "base",
 We welcome issues, feature requests, and pull requests.
 
 1.  Fork the repository
-
-2.  Create a new branch: git checkout -b feature/my-feature
-
-3.  Commit your changes: git commit -m "Add feature"
-
-4.  Push to GitHub: git push origin feature/my-feature
-
+2.  Create a new branch: `git checkout -b feature/my-feature`
+3.  Commit your changes: `git commit -m "Add feature"`
+4.  Push to GitHub: `git push origin feature/my-feature`
 5.  Open a Pull Request
 
-## Authors 
+## Authors
 
-Rubeshkumar Polani Chandrasekar — @drrubesh
+The `gtregression` package is developed and maintained by a collaborative team committed to making regression modeling accessible, especially for public health professionals and researchers in LMICs.
 
-Yuvaraj Krishnamoorthy
+- **Rubeshkumar Polani Chandrasekar**  
+  <rubesh.pc@gmail.com>  
+  ORCID: [0000-0002-0418-7592](https://orcid.org/0000-0002-0418-7592)  
+  _Creator and Author_
 
-Marie Gilbert Majella
+- **Salin K Eliyas**  
+  <salins13@gmail.com>  
+  ORCID: [0000-0002-8020-5860](https://orcid.org/0000-0002-8020-5860)  
+  _Author_
 
-License MIT License. See LICENSE for details.
+- **Manikandanesan Sakthivel**  
+  <nesanmbbs@gmail.com>  
+  ORCID: [0000-0002-5438-3970](https://orcid.org/0000-0002-5438-3970)  
+  _Author_
 
----
+- **Yuvaraj Krishnamoorthy**  
+  <yuvaraj@propulevidence.org>  
+  ORCID: [0000-0003-4688-510X](https://orcid.org/0000-0003-4688-510X)  
+  _Author_
+
+- **Marie Gilbert Majella**  
+  <gilbert2691@gmail.com>  
+  ORCID: [0000-0003-4036-5162](https://orcid.org/0000-0003-4036-5162)  
+  _Author_
+
+## License
+
+MIT License. See LICENSE for details.
