--- a/README.Rmd
+++ b/README.Rmd
@@ -20,6 +20,19 @@ alt="gtregression logo" width="180"/>
 
 # gtregression
 
+## Motivation 
+
+Many academics and public health professionals in low- and middle-income 
+countries (LMICs) hesitate to use R due to its steep learning curve. Instead, 
+they often rely on menu-driven software like SPSS or Epi Info, which limits 
+their ability to perform reproducible and advanced analyses. As a step towards 
+addressing this gap, we created the gtregression package to simplify regression 
+modelling in R. The package offers user-friendly syntax, intuitive functions, 
+and publication-ready outputs—empowering analysts to adopt open-source tools 
+with confidence.
+
+## About the Package
+
 `gtregression` is an R package that simplifies regression modeling and
 generates publication-ready tables using the `gtsummary` ecosystem. It
 supports a variety of regression approaches with built-in tools for
@@ -281,7 +294,7 @@ interaction_models(pima_data,
 ### Confounding & Interaction
 
 | Function Name           | Purpose                                           |
-|------------------------|------------------------------------------------|
+|------------------------|----------------------------------------------------|
 | `identify_confounder()` | Confounding assessment via % change or MH method  |
 | `interaction_models()`  | Compare models with and without interaction terms |
 
@@ -295,7 +308,7 @@ interaction_models(pima_data,
 | `save_table()`       | Export table to `.html`, `.csv`, `.docx`       |
 | `save_docx()`        | Save table as Word document (`.docx`)          |
 | `save_plot()`        | Save plot as `.png`, `.pdf`, etc.              |
-| `merge_table()`      | Combine descriptive and regression tables      |
+| `merge_tables()`      | Combine descriptive and regression tables      |
 
 ## Contributing {#contributing}
 
@@ -341,3 +354,10 @@ especially for public health professionals and researchers in LMICs.
 ## License {#license}
 
 MIT License. See LICENSE for details.
+
+## Acknowledgements
+
+The gtregression package icon uses the **“Hearts”** symbol created by 
+[Kim Sun Young](https://thenounproject.com/creator/hookeeak/) from 
+[The Noun Project](https://thenounproject.com), used under the Creative Commons 
+Attribution (CC BY 3.0) license.
